# monomial-sumcheck-benchmarks

./: Cargo.toml  PARALLELISM.md  README.md
.cargo/: config.toml
benches/: binding.rs  field_ops.rs  lookup_tables.rs  sumcheck.rs  sumcheck_parallel.rs
docs/handoffs/: parallelism-2026-04.md
docs/notes/: fused-bind-eval-ab.md  parallelism-design-discussion.md
docs/plans/: sumcheck-cpu-platform.md  sumcheck-parallel-productionization.md
examples/: par4_ab.rs  par4_repro.rs  pinned_ab.rs  pinned_repro.rs  rayon_compare.rs  relaxed_ab.rs
src/sumcheck/: bb5_packed.rs  bb_ext.rs  bn254.rs  data.rs  fp128.rs  generic.rs  gf128.rs  mod.rs  parallel.rs
src/sumcheck/parallel/: field.rs  legacy.rs  mod.rs  scheduler.rs
src/sumcheck/parallel/impls/: fp128.rs  gf128.rs  mod.rs
src/sumcheck/parallel/pool/: mod.rs  platform.rs
tests/: bb5_packed_eq.rs  fused_delayed_seq.rs  par4_loop.rs  parallel_delayed.rs  pinned_loop.rs
