[package]
name = "monomial-sumcheck-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

# Plonky3 fields
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b482e1be5f6d2e0917c5ecea3009335bbfd94e42" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b482e1be5f6d2e0917c5ecea3009335bbfd94e42" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b482e1be5f6d2e0917c5ecea3009335bbfd94e42" }

# 128-bit prime field (p = 2^128 - 275)
# Exact hachi revision containing the Fp128 arithmetic used by these benchmarks.
hachi-pcs = { git = "https://github.com/LayerZero-Labs/hachi.git", rev = "7e81702c87bd7adb9caeb7cb5064d65e16f740ff", default-features = false }

# GF(2^128) GHASH field
binius-field = { git = "https://github.com/binius-zk/binius64", rev = "6a69077efb40ee3d09e37e1c9f3511e2a9f75c99" }

# BN254 scalar field (Jolt fork with mul_by_hi_2limbs)
ark-bn254 = { git = "https://github.com/quangvdao/arkworks-algebra", rev = "8221f4df9673c59b7f1bde82f483d73a36d5b00f", features = ["scalar_field"] }
ark-ff = { git = "https://github.com/quangvdao/arkworks-algebra", rev = "8221f4df9673c59b7f1bde82f483d73a36d5b00f" }
paste = "1.0.15"

# Optional: only pulled in when the `parallel` feature is enabled, so the
# default build of the library stays rayon-free.
rayon = { version = "1", optional = true }
chili = { version = "0.2", optional = true }

# Extracted, reusable parallel sumcheck primitives. Both crates live at
# `~/Documents/SNARKs/*` for now; will move to git remotes once the
# APIs stabilize (see `docs/plans/sumcheck-parallel-productionization.md`).
pinned-pool = { path = "../../SNARKs/pinned-pool" }
sumcheck-parallel = { path = "../../SNARKs/sumcheck-parallel" }

[features]
default = []
# Enables the parallel sumcheck wrappers in `src/sumcheck/parallel.rs` and
# the `sumcheck_parallel` bench. Required by `cargo bench --bench sumcheck_parallel`.
parallel = ["dep:rayon"]
# Enables chili-based variants (Phase 2). Pulls chili in addition to rayon.
parallel_chili = ["parallel", "dep:chili"]

[profile.bench]
lto = "thin"

[[bench]]
name = "field_ops"
harness = false

[[bench]]
name = "binding"
harness = false

[[bench]]
name = "lookup_tables"
harness = false

[[bench]]
name = "sumcheck"
harness = false

[[bench]]
name = "sumcheck_parallel"
harness = false
required-features = ["parallel"]

[[example]]
name = "pinned_ab"
required-features = ["parallel"]

[[example]]
name = "pinned_repro"
required-features = ["parallel"]

[[example]]
name = "rayon_compare"
required-features = ["parallel"]
